--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "devDependencies": {
+    "@types/jspdf": "^2.0.0",
     "typescript": "^5.6.2"
+  },
+  "dependencies": {
+    "jspdf": "^2.5.2"
   }
 }
